--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <mat-card>
   <mat-card-title>Here are some links to help you start: </mat-card-title>
+  <nav>
+    <a routerLink="/contact">Contact</a>
+  </nav>
+  <router-outlet></router-outlet>
   <mat-list>
     <mat-list-item>
       <h2><a target="_blank" href="https://angular.io/tutorial">Tour of Heroes</a></h2>
